--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.2",
+    "mdb-react-ui-kit": "^7.0.0",
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.10.3",
     "react-datepicker": "^4.25.0",
